@@ -1,5 +1,6 @@
 2006-10-01  Emmanuel Dreyfus  <manu@netbsd.org>
 	* src/racoon/isakmp.c: Avoid using NULL pointer (Coverity)
+	* src/racoon/ipsec_doi.c: FIx memory leak (Coverity)
 
 2006-09-30  Emmanuel Dreyfus  <manu@netbsd.org>
 	* src/racoon/isakmp_agg.c: Remove dead code (Coverity)
